force-app/main/default/objects/Client__c/Client__c.object-meta.xml
<CustomObject>
    <label>Client</label>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>