force-app/main/default/objects/Client__c/fields/Resolved_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Accounts__c</fullName>
    <label>Resolved Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>