force-app/main/default/objects/Client__c/fields/Total_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Total_Accounts__c</fullName>
    <label>Total Accounts</label>
    <summaryFilterItems>
        <field>Debt_Account__c.Status__c</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </summaryFilterItems>
    <summaryForeignKey>Debt_Account__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>