force-app/main/default/objects/Client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Resolved_Accounts__c</columns>
    <columns>Total_Accounts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>